[metadata]
name = replayslol_reddit_commenter_api
description = FastAPI for the replayslol-reddit-commenter
author = George Thomas
classifiers = Programming Language :: Python :: 3.11

[options]
packages =
    replayslol_reddit_commenter_api
install_requires =
    annotated-types==0.6.0
    anyio==3.7.1
    click==8.1.7
    colorama==0.4.6
    fastapi==0.105.0
    greenlet==3.0.2
    h11==0.14.0
    idna==3.6
    psycopg2-binary==2.9.9
    pydantic==2.5.2
    pydantic_core==2.14.5
    python-dotenv==1.0.0
    python-multipart==0.0.6
    sniffio==1.3.0
    SQLAlchemy==2.0.23
    starlette==0.27.0
    tenacity==8.2.3
    typing_extensions==4.9.0
    uvicorn==0.24.0.post1
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    annotated-types==0.6.0
    anyio==3.7.1
    click==8.1.7
    colorama==0.4.6
    fastapi==0.105.0
    greenlet==3.0.2
    h11==0.14.0
    idna==3.6
    psycopg2-binary==2.9.9
    pydantic==2.5.2
    pydantic_core==2.14.5
    python-dotenv==1.0.0
    python-multipart==0.0.6
    sniffio==1.3.0
    SQLAlchemy==2.0.23
    starlette==0.27.0
    tenacity==8.2.3
    typing_extensions==4.9.0
    uvicorn==0.24.0.post1

[flake8]
max-line-length = 160

[options.package_data]
replayslol_reddit_commmenter_api = py.typed
